[workspace]
members = [
    "crypto",
    "coordinator",
]

[profile.release]
codegen-units = 1
lto = true
panic = "abort"
overflow-checks = true
strip = true

# Compilation profile for any non-workspace member.
# Dependencies are optimized, even in a dev build. This improves dev performance
# while having neglible impact on incremental build times.
[profile.dev.package."*"]
opt-level = 3

[patch.crates-io]
# ark-std = { git = 'https://github.com/arkworks-rs/std' }
# ark-ff = { git = 'https://github.com/arkworks-rs/algebra' }
# ark-ec = { git = 'https://github.com/arkworks-rs/algebra' }
# ark-bls12-381 = { git = 'https://github.com/arkworks-rs/curves' }
